kubernetes/apps/default/litellm/resources/http-route-external.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm-external
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: external
      conditions: ["[STATUS] == 403"]
spec:
  hostnames:
    - litellm.mcf.io
  parentRefs:
    - name: external
      namespace: ingress-system
  rules:
    - backendRefs:
        - name: litellm
          namespace: default
          port: 4000
      matches:
        - path:
            type: PathPrefix
            value: /
