kubernetes/apps/default/litellm/resources/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      url: https://litellm.milton.mcf.io/health/liveliness
      conditions: ["[STATUS] == 200"]
spec:
  hostnames:
    - litellm.milton.mcf.io
  parentRefs:
    - name: internal
      namespace: ingress-system
  rules:
    - backendRefs:
        - name: litellm
          namespace: default
          port: 4000
      matches:
        - path:
            type: PathPrefix
            value: /
